# MusicPlayer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: package.ps1
src/: app.rs  audio.rs  decoder.rs  icon.rs  lib.rs  main.rs  metadata.rs  single_instance.rs  spectrum.rs  waveform.rs
tests/: audio_processing_tests.rs  core_tests.rs  decode_tests.rs  icon_tests.rs  spectrum_tests.rs
